Fix Safari layout bug

--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -7,7 +7,8 @@
   justify-content: flex-end;
   align-items: center;
   bottom: 0;
-  margin-bottom: 5vh;
+  padding-bottom: 65px;
+  padding-top: 5px;
 
   &__title {
     margin-bottom: 16px;
