--- a/src/components/Intro/intro.scss
+++ b/src/components/Intro/intro.scss
@@ -4,7 +4,7 @@
   width: 100%;
   max-width: 800px;
 
-  padding: 0 30px;
+  padding: 10px 30px;
   display: flex;
   flex-direction: column;
   justify-content: center;
