--- a/src/components/Layout/layout.scss
+++ b/src/components/Layout/layout.scss
@@ -1,6 +1,7 @@
 .Layout {
   margin: 0;
-  height: 100vh;
+  width: 100%;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
